avro_derive/tests/ui/avro_rs_501_non_basic_enum.stderr
error: expected expression, found `let` statement
  --> tests/ui/avro_rs_501_non_basic_enum.rs:20:10
   |
20 | #[derive(AvroSchema)]
   |          ^^^^^^^^^^
   |
   = note: only supported directly in conditions of `if` and `while` expressions
   = note: this error originates in the derive macro `AvroSchema` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected one of `)`, `,`, `.`, `?`, or an operator, found `;`
  --> tests/ui/avro_rs_501_non_basic_enum.rs:20:10
   |
20 | #[derive(AvroSchema)]
   |          ^^^^^^^^^^ expected one of `)`, `,`, `.`, `?`, or an operator
   |
   = note: this error originates in the derive macro `AvroSchema` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected one of `)`, `,`, `.`, `?`, `else`, or an operator, found `::`
  --> tests/ui/avro_rs_501_non_basic_enum.rs:20:10
   |
20 | #[derive(AvroSchema)]
   |          ^^^^^^^^^^ expected one of `)`, `,`, `.`, `?`, `else`, or an operator
   |
   = note: this error originates in the derive macro `AvroSchema` (in Nightly builds, run with -Z macro-backtrace for more info)

error: proc-macro derive produced unparsable tokens
  --> tests/ui/avro_rs_501_non_basic_enum.rs:20:10
   |
20 | #[derive(AvroSchema)]
   |          ^^^^^^^^^^

error[E0061]: this method takes 1 argument but 3 arguments were supplied
  --> tests/ui/avro_rs_501_non_basic_enum.rs:20:10
   |
20 | #[derive(AvroSchema)]
   |          ^^^^^^^^^^
   |          |
   |          unexpected argument #2 of type `()`
   |          unexpected argument #3 of type `Schema`
   |
note: method defined here
  --> $WORKSPACE/avro/src/schema/union.rs
   |
   |     pub fn variant(&mut self, schema: Schema) -> Result<&mut Self, Error> {
   |            ^^^^^^^
   = note: this error originates in the derive macro `AvroSchema` (in Nightly builds, run with -Z macro-backtrace for more info)
